# xpick

./: .gitignore  README.md  pyproject.toml
xpick/: __main__.py  app.py  pickertool.ts
xpick/app/: main.py  pickertool.py  pickertool.ts  processing.py  utils.py
