[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xpick"
version = "0.1.0"
authors = [
    { name = "Alister Trabattoni", email = "alister.trabattoni@gmail.com" },
]
dependencies = ["bokeh==3.4.2", "colorcet", "matplotlib", "numpy", "pandas", "xdas"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]

[tool.setuptools.package-data]
"xpick.app" = ["*.ts"]

[project.scripts]
xpick = "xpick.__main__:main"

[tool.isort]
profile = "black"
